@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.217 2006/01/13 15:46:05 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.218 2006/01/31 03:21:58 agaffney Exp $
 
 *GLI-gtkfe-0.3 (27 Oct 2005)
+
+  30 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
+  if user doesn't add any interfaces for post-install, confirm
 
   13 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
   add warning to ExtraPackages about fetch-restricted and interactive ebuilds
